start adding logging

--- a/learnYouAHaskell/.ghc.environment.x86_64-mingw32-8.10.3
+++ b/learnYouAHaskell/.ghc.environment.x86_64-mingw32-8.10.3
@@ -24,3 +24,4 @@ package-id template-haskell-2.16.0.0
 package-id directory-1.3.6.0
 package-id text-1.2.4.1
 package-id random-1.1-36d15464722ad8746c8f09b780c8c95c47639994
+package-id mtl-2.2.2
